<resources>
<!--    App Name-->
    <string name="app_name">Restaurant Inspector</string>

<!--    Activities' titles-->
    <string name="title_activity_restaurant">Restaurants</string>
    <string name="title_activity_inspection">Inspections</string>
    <string name="title_activity_violation">Violations</string>
    <string name="title_activity_maps">Map</string>

<!--    Main Activity-->
    <string name="main_activity_welcome">Welcome!</string>

<!--    Restaurant Activity-->
    <string name="restaurant_activity_issue_found"># Issue Found: \t</string>
    <string name="restaurant_activity_last_inspection">Last Inspection: \t</string>
    <!--    Sample Output-->
        <string name="restaurant_activity_restaurant_icon_description">Restaurant Icon</string>
        <string name="restaurant_activity_hazard_level_icon_description">Hazard Level Icon</string>
        <string name="restaurant_activity_restaurant_name">Restaurant Name</string>
        <string name="restaurant_activity_issue_number"># issue</string>
        <string name="restaurant_activity_how_long_ago">How long ago</string>
        <string name="restaurant_activity_restaurant_favorite_icon_description">Favorite Icon</string>

<!--    Inspection Activity-->
    <string name="inspection_activity_latitude">Latitude: \t</string>
    <string name="inspection_activity_longitude">Longitude: \t</string>
    <string name="inspection_activity_critical_issues_found">Critical issues found: \t</string>
    <string name="inspection_activity_non_critical_issues_found">
        Non-critical issues found: \t</string>
    <string name="inspection_activity_last_inspection">Last Inspection: \t</string>
    <!--    Sample Output-->
        <string name="inspection_activity_restaurant_name">Restaurant Name</string>
        <string name="inspection_activity_address">Address</string>
        <string name="inspection_activity_latitude_coordinate">Latitude Coordinates</string>
        <string name="inspection_activity_longitude_coordinate">longitude Coordinate</string>
        <string name="inspection_activity_hazard_level_icon_description">
            Inspection Hazard Level Icon</string>
        <string name="inspection_activity_issue_number"># issue</string>
        <string name="inspection_activity_how_long_ago">How long ago</string>

<!--    Violation Activity-->
    <string name="violation_activity_critical_issues_found">Critical issues found: \t</string>
    <string name="violation_activity_non_critical_issues_found">
        Non-critical issues found: \t</string>
    <string name="violation_activity_hazard_level">Hazard level: \t</string>
    <string name="violation_activity_inspection_type">Inspection type: \t</string>
    <string name="violation_activity_routine">Routine</string>
    <string name="violation_activity_follow_up">Follow-Up</string>
    <string name="violation_activity_hazard_level_low">LOW</string>
    <string name="violation_activity_hazard_level_moderate">MODERATE</string>
    <string name="violation_activity_hazard_level_high">HIGH</string>
    <!--    Sample Output-->
        <string name="violation_activity_date">Date</string>
        <string name="violation_activity_inspection_type_sample">Type</string>
        <string name="violation_activity_issue_number"># issue</string>
        <string name="violation_activity_hazard_level_icon_description">
            Violation Hazard Level Icon</string>
        <string name="violation_activity_hazard_level_sample">Level</string>
        <string name="violation_activity_nature_icon_description">Violation Nature Icon</string>
        <string name="violation_activity_severity_icon_description">Violation Severity_Icon</string>
        <string name="violation_activity_brief_description_sample">Critical/Not Critical</string>

<!--    Switching Button for Map Activity and Restaurant Activity-->
    <string name="current_place_menu_go_to_restaurant_list">Go to Restaurant Lists</string>
    <string name="menu_restaurant_activity_go_to_map">Go to Map</string>

<!--    Dialog Information-->
    <string name="dialog_information_title">Restaurant Information</string>
    <string name="do_you_want_to_go_to_the_restaurant_s_inspection_page">
        Do you want to see the restaurant\'s full information?</string>
    <string name="dialog_information_restaurant_address">Address: \t</string>
    <string name="dialog_information_restaurant_level">Hazard Level: \t</string>
    <string name="dialog_information_hazard_level_low">Low</string>
    <string name="dialog_information_hazard_level_moderate">Moderate</string>
    <string name="dialog_information_hazard_level_high">High</string>
    <string name="dialog_information_hazard_level_none">None</string>
<!--    Sample Output-->
    <string name="dialog_information_restaurant_name">Name</string>

<!--    Restaurant Adapter-->
    <string name="restaurant_adapter_days_before">\t days ago</string>
    <string name="restaurant_adapter_none">None</string>

<!--    Violation Adapter-->
    <string name="violation_adapter_critical">, \tCritical</string>
    <string name="violation_adapter_not_critical">, \tNot Critical</string>
    
<!--    Filter Box-->
    <string name="filter_box_title">Filter Box</string>
    <string name="filter_box_favourite_only">Favourite Restaurant Only:</string>
    <string name="filter_box_hazard_level">Pick the Hazard Level:</string>
    <string name="filter_box_number_of_violations_title">Least Number of Critical Violations:</string>
    <string name="filter_box_violation_number">Enter number</string>
    <string name="filter_box_negative_button">Cancel</string>
    <string name="filter_box_positive_button">OK</string>
    <string name="filter_box_reset_filter_box">Reset Filter</string>
    <string name="filter_box_select_one">Select One</string>
    <string name="filter_box_hazard_level_low">Low</string>
    <string name="filter_box_hazard_level_moderate">Moderate</string>
    <string name="filter_box_hazard_level_high">High</string>
    <string name="filter_box_hazard_level_none">None</string>

<!--    Map Activity-->
    <string name="map_activity_default_info_title">Default Location</string>
    <string name="map_activity_default_info_snippet">
        No places found, because location permission is disabled.</string>
    <string name="map_activity_option_get_place">Get place</string>
    <string name="map_activity_pick_place">Choose a place</string>
</resources>
