<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_rounded"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/textView_filter_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/filter_box_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/background_rounded">

            <Switch
                android:id="@+id/switch_filter_box_isFavourite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/filter_box_favourite_only"
                android:checked="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/background_rounded">

            <TextView
                android:id="@+id/textView_filter_box_hazard-level_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_box_hazard_level"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/spinner_filter_box_hazard_level"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/background_rounded">

            <TextView
                android:id="@+id/textView_filter_box_number_of_violations_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_box_number_of_violations_title" />

            <EditText
                android:id="@+id/editText_filter_box_number_of_violations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/filter_box_violation_number"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>