<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_inspection_activity_hazard_level_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/inspection_activity_hazard_level_icon_description"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/textView_inspection_activity_critical_issue_found_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/inspection_activity_critical_issues_found"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_inspection_activity_hazard_level_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_inspection_activity_critical_issue_found"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/textView_inspection_activity_critical_issue_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_activity_issue_number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_inspection_activity_critical_issue_found_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_inspection_activity_critical_issue_found_title"
            app:layout_constraintTop_toTopOf="@+id/textView_inspection_activity_critical_issue_found_title" />

        <TextView
            android:id="@+id/textView_inspection_activity_noncritical_issue_found_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_activity_non_critical_issues_found"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView_inspection_activity_hazard_level_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView_inspection_activity_critical_issue_found_title"
            app:layout_constraintEnd_toStartOf="@+id/textView_inspection_activity_noncritical_issue_found"
            android:layout_marginStart="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/textView_inspection_activity_noncritical_issue_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_activity_issue_number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_inspection_activity_noncritical_issue_found_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_inspection_activity_noncritical_issue_found_title"
            app:layout_constraintTop_toTopOf="@+id/textView_inspection_activity_noncritical_issue_found_title" />

        <TextView
            android:id="@+id/textView_inspection_activity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_activity_last_inspection"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_inspection_activity_hazard_level_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView_inspection_activity_noncritical_issue_found_title"
            app:layout_constraintEnd_toStartOf="@+id/textView_inspection_activity_date_title"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/textView_inspection_activity_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_activity_how_long_ago"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_inspection_activity_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_inspection_activity_date"
            app:layout_constraintTop_toTopOf="@+id/textView_inspection_activity_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>